--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 </head>
 
 <body>
+
 	<h1>Recipes</h1>
 
 	<ul>
-		<li><a href="chicken.html">Chicken</a></li>
-		<li><a href="pages/baklava.html">Recipe Title 2</a></li>
-		<li><a href="pages/kwek-kwek.html">Recipe Title 3</a></li>
+
+		<li><a href="crispy-baked-chicken-with-giardiniera.html">Crispy Baked Chicken with Giardiniera</a></li>
+		<li><a href="pages/greek-baklava.html">Greek Baklava</a></li>
+		<li><a href="pages/kwek-kwek.html">Kwek Kwek</a></li>
+
 	</ul>
+
 </body>
 
 </html>
