Modify recipe pages to link to style.css and update the content of the recipe with description, ingredients and directions

--- a/pages/kwek-kwek.html
+++ b/pages/kwek-kwek.html
@@ -5,6 +5,50 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Kwek Kwek</title>
+	<link rel="stylesheet" href="../style.css">
+</head>
+
+<body>
+	<h1>Kwek Kwek</h1>
+
+	<p>A popular street food in the Philippines, kwek kwek are hard-boiled quail eggs in orange batter that are deep
+		fried and served with a sweet and sour sauce.</p>
+
+	<p class="subtitle">Ingredients</p>
+
+	<ul>
+		<li>12 quail eggs</li>
+		<li>¼ cup rice vinegar</li>
+		<li>¼ cup ketchup</li>
+		<li>¼ cup brown sugar</li>
+		<li>2 teaspoons soy sauce</li>
+		<li>½ cup water</li>
+		<li>1 drop yellow food coloring</li>
+		<li>1 drop red food coloring</li>
+		<li>1 cup all-purpose flour</li>
+		<li>salt and freshly ground black pepper to taste</li>
+		<li>oil for deep frying</li>
+		<li>¼ cup cornstarch</li>
+		<li>bamboo skewer</li>
+	</ul>
+
+	<p class="subtitle">Directions</p>
+
+	<ol>
+		<li>Place eggs in a saucepan and cover with water. Bring to a boil, reduce heat to medium, cover, and cook for 4
+			minutes. Remove from heat and let stand, covered, for 2 minutes. Rinse eggs in cold water and cool to room
+			temperature; peel.</li>
+		<li>Combine rice vinegar, ketchup, brown sugar, and soy sauce in a saucepan. Cook and stir over medium until
+			sugar has dissolved, about 5 minutes. Let cool.</li>
+		<li>Prepare batter by adding red and yellow food coloring to the water to get a deep orange color. Combine
+			flour, salt, and pepper in a bowl; pour in orange water and stir until there are no lumps.</li>
+		<li>Heat oil in a wok to 375 degrees F (190 degrees C).</li>
+		<li>Gently roll eggs in cornstarch to coat and shake off excess cornstarch. Dip into orange batter so they are
+			fully covered. Poke eggs with the bamboo skewer and drop gently into the hot oil. Deep fry until the batter
+			is crispy, about 2 minutes per side. Remove eggs with a slotted spoon and drain on paper towels.</li>
+	</ol>
+
+</body>
 </head>
 
 <body>
