--- a/pages/greek-baklava.html
+++ b/pages/greek-baklava.html
@@ -5,11 +5,36 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Greek Baklava</title>
+	<link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
 	<h1>Greek Baklava</h1>
-	<p>https://www.allrecipes.com/recipe/9454/greek-baklava/</p>
-</body>
 
-</html>
+	<p>Baklava is a delicious Greek dessert made up of layers of crispy phyllo dough, honey and nuts that's sooo easy to
+		make. A Greek friend showed me how to make this fabulous recipe.</p>
+
+	<p class="subtitle">Ingredients</p>
+
+	<ul>
+		<li>Phyllo Dough</li>
+		<li>Nuts</li>
+		<li>Butter</li>
+		<li>Cinnamon</li>
+		<li>Water, Sugar, Vanilla and Honey</li>
+	</ul>
+
+	<p class="subtitle">Directions</p>
+
+	<ol>
+		<li>Stack eight sheets of phyllo dough, brushing with butter between each layer, to create a sturdy base.
+			Sprinkle it with a mixture of chopped nuts and cinnamon. Top with two sheets of phyllo dough and follow with
+			the nut mixture. Repeat this process a few more times, until the nut mixture is gone. Top with about eight
+			more layers of phyllo, buttering each layer.</li>
+		<li>Cut the baklava into diamond or square shapes. Be sure to cut all the way to the bottom of the pan. Bake
+			until golden and crisp.</li>
+		<li>Boil water and sugar until sugar is melted. Add vanilla and honey. Remove the baklava from the oven and
+			immediately pour syrup over it. Let cool before serving.</li>
+	</ol>
+
+</body>
